Fix unaligned preset list width (add 2px)

--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -412,7 +412,7 @@ body > .mod-settings.mod-window-visible {
 
 .mod-presets,
 .mod-file-list {
-    width: 320px !important;
+    width: 322px !important;
 }
 .radio-preset {
     height: 9px !important;
